; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_machine_routines.c_ml_stack_remaining.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_machine_routines.c_ml_stack_remaining.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }
%struct.TYPE_3__ = type { i64 }

@INTSTACK_SIZE = common dso_local global i64 0, align 8
@local = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ml_stack_remaining() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = ptrtoint i64* %2 to i64
  store i64 %3, i64* %2, align 8
  %4 = call i64 (...) @ml_at_interrupt_context()
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %14

6:                                                ; preds = %0
  %7 = load i64, i64* %2, align 8
  %8 = call %struct.TYPE_4__* (...) @current_cpu_datap()
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @INTSTACK_SIZE, align 8
  %12 = sub nsw i64 %10, %11
  %13 = sub i64 %7, %12
  store i64 %13, i64* %1, align 8
  br label %20

14:                                               ; preds = %0
  %15 = load i64, i64* %2, align 8
  %16 = call %struct.TYPE_3__* (...) @current_thread()
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = sub i64 %15, %18
  store i64 %19, i64* %1, align 8
  br label %20

20:                                               ; preds = %14, %6
  %21 = load i64, i64* %1, align 8
  ret i64 %21
}

declare dso_local i64 @ml_at_interrupt_context(...) #1

declare dso_local %struct.TYPE_4__* @current_cpu_datap(...) #1

declare dso_local %struct.TYPE_3__* @current_thread(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
